sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:3: error: not found: type int
  var i: int = 0;
         ^AlgSelectionSort:4: error: not found: type int
  var min: int=0;
           ^