sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  var i: int = 0;
  var min: int=0;
  
  for(min<-(i+1) to 10){
    if(plusPetit(min,i)){
      echange(i,min);
    }
    min=min+1;
  }
}